--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.16.4",
-    "socket.io": "^4.8.1"
-  }
+  "license": "ISC"
 }
