--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
+    "@headlessui/react": "^2.2.6",
     "axios": "^1.7.7",
     "chat-app": "file:..",
     "lucide-react": "^0.459.0",
