--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,10 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
